[gd_scene load_steps=13 format=3 uid="uid://cvhb6lbvi5yyy"]

[ext_resource type="Script" path="res://Scenes/combat.gd" id="1_trk2u"]
[ext_resource type="Script" path="res://Scenes/Enemys.gd" id="2_njafm"]
[ext_resource type="AudioStream" uid="uid://e6ess7pfjv55" path="res://assets/sound/06 - Victory!.ogg" id="2_qblj3"]
[ext_resource type="Texture2D" uid="uid://bviuxihkwnxw3" path="res://assets/bg/parallax/parallax_demon_woods_pack/layers/parallax-demon-woods-far-trees.png" id="3_1v2bm"]
[ext_resource type="Script" path="res://Scenes/BG.gd" id="4_0ckuo"]
[ext_resource type="Texture2D" uid="uid://ddqe56y5m61ah" path="res://assets/bg/parallax/parallax_demon_woods_pack/layers/parallax-demon-woods-bg.png" id="4_p764x"]
[ext_resource type="Texture2D" uid="uid://btxyy4oj3pb58" path="res://assets/bg/parallax/parallax_demon_woods_pack/layers/parallax-demon-woods-mid-trees.png" id="5_2xgoe"]
[ext_resource type="Texture2D" uid="uid://dfo1r3fa1lx7a" path="res://assets/bg/parallax/parallax_demon_woods_pack/layers/parallax-demon-woods-close-trees.png" id="6_eubyb"]
[ext_resource type="PackedScene" uid="uid://hr15ybf6erjh" path="res://Scenes/card_battle.tscn" id="8_4m4ba"]
[ext_resource type="PackedScene" uid="uid://dc7o8kirf2ypa" path="res://Scenes/ui/game_end.tscn" id="8_pt0vs"]
[ext_resource type="AudioStream" uid="uid://byolhf2yqpn5u" path="res://assets/sound/enemy.wav" id="9_x0esy"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_l8s61"]

[node name="Combat" type="Node2D"]
script = ExtResource("1_trk2u")

[node name="victory_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(249, 407)
stream = ExtResource("2_qblj3")
volume_db = -10.0

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(306, 131)
scale = Vector2(4, 4)

[node name="Sprite2D3" type="Sprite2D" parent="Node2D"]
texture = ExtResource("3_1v2bm")

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
texture = ExtResource("4_p764x")

[node name="Sprite2D4" type="Sprite2D" parent="Node2D"]
texture = ExtResource("5_2xgoe")

[node name="Sprite2D2" type="Sprite2D" parent="Node2D"]
texture = ExtResource("6_eubyb")

[node name="BG" type="TextureRect" parent="."]
visible = false
offset_left = -65.0
offset_top = -19.0
offset_right = 2697.0
offset_bottom = 2731.0
scale = Vector2(0.26, 0.26)
texture = SubResource("CompressedTexture2D_l8s61")
stretch_mode = 4
script = ExtResource("4_0ckuo")

[node name="Enemys" type="HBoxContainer" parent="."]
clip_children = 2
offset_top = 76.0
offset_right = 679.0
offset_bottom = 530.0
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 70
alignment = 1
script = ExtResource("2_njafm")

[node name="CardBattle" parent="." instance=ExtResource("8_4m4ba")]
offset_left = -4.0
offset_top = -32.0
offset_right = 36.0
offset_bottom = 8.0

[node name="music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(243, 423)
stream = ExtResource("9_x0esy")
volume_db = -15.285

[node name="Transisi" parent="." instance=ExtResource("8_pt0vs")]

[connection signal="finished" from="victory_sound" to="." method="_on_victory_sound_finished"]
[connection signal="finished" from="music" to="." method="_on_music_finished"]
